# esynergy-open-rag

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODING-CONVENTIONS.md  CONTRIBUTING.md  LICENSE.txt  README.md  comments.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  release.yml
.github/workflows/: deployment.yml  new-contributors-autoreply.yaml  new-contributors-autoreply.yml  pre-commit.yml  pull-request.yml
docs/: conf.py  genindex.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js  src.esynergy_open_rag.components.doc_loaders.html  src.esynergy_open_rag.components.doc_loaders.rst  src.esynergy_open_rag.components.html  src.esynergy_open_rag.components.llms.html  src.esynergy_open_rag.components.rags.html  src.esynergy_open_rag.components.rags.rst  src.esynergy_open_rag.html  src.esynergy_open_rag.streamlit_components.html  src.esynergy_open_rag.streamlit_components.rst  src.html
docs/_sources/: src.esynergy_open_rag.components.doc_loaders.rst.txt  src.esynergy_open_rag.components.llms.rst.txt  src.esynergy_open_rag.rst.txt  src.rst.txt
docs/html/: genindex.html  index.html  modules.html  objects.inv  (+14 more)
docs_generation/: index.rst  src.esynergy_open_rag.components.embeddings.rst  src.esynergy_open_rag.components.llms.rst  src.esynergy_open_rag.components.retrievers.rst
scripts/: build_and_test.sh
src/: requirements.txt
streamlit/: Dockerfile  README.md  requirements.txt  salesChat.py  sidebar_functions.py  streamlit_support.py
tests/: README.md  config.py  configtest.py  test_embeddings.py  test_llm.py  test_rag.py  test_retriever.py
(+58 files in other folders)
